# transform-ordering-selection

./: .gitattributes  .gitignore  README.md  pyproject.toml
paper/: .gitignore  session.txt  todo-review.txt  todo2.txt
paper/draft/: main.tex  refs.bib
paper/final/: generate_figures.py  highlights.tex  main.tex  paper.md  refs.bib
paper/hypotheses/: h1_ordering_dominance.md  h2_complementary_bookends.md  h3_threshold_shift_dominance.md  h5_pipeline_length_effect.md
src/: analyze.py  grid_search.py  main.py  parameters.toml  presentation.ipynb
src/output/: analysis.json  results_matrix.json  seed_manifest.json
src/output/base/Baseline/: metrics.json
src/output/base/ColorSpaceTransform/: metrics.json
src/output/base/ColorSpaceTransform -> DenoiseTransform/: metrics.json
src/output/base/ColorSpaceTransform -> DenoiseTransform -> EqualizationTransform/: metrics.json
src/output/base/ColorSpaceTransform -> DenoiseTransform -> EqualizationTransform -> NormalizeTransform/: metrics.json
src/output/base/ColorSpaceTransform -> DenoiseTransform -> NormalizeTransform/: metrics.json
src/output/base/ColorSpaceTransform -> DenoiseTransform -> NormalizeTransform -> EqualizationTransform/: metrics.json
src/output/base/ColorSpaceTransform -> EqualizationTransform/: metrics.json
src/output/base/ColorSpaceTransform -> EqualizationTransform -> DenoiseTransform/: metrics.json
src/output/base/ColorSpaceTransform -> EqualizationTransform -> DenoiseTransform -> NormalizeTransform/: metrics.json
src/output/base/ColorSpaceTransform -> EqualizationTransform -> NormalizeTransform/: metrics.json
src/output/base/ColorSpaceTransform -> EqualizationTransform -> NormalizeTransform -> DenoiseTransform/: metrics.json
src/output/base/ColorSpaceTransform -> NormalizeTransform/: metrics.json
src/output/base/ColorSpaceTransform -> NormalizeTransform -> DenoiseTransform/: metrics.json
src/output/base/ColorSpaceTransform -> NormalizeTransform -> DenoiseTransform -> EqualizationTransform/: metrics.json
src/output/base/ColorSpaceTransform -> NormalizeTransform -> EqualizationTransform/: metrics.json
src/output/base/ColorSpaceTransform -> NormalizeTransform -> EqualizationTransform -> DenoiseTransform/: metrics.json
src/output/base/DenoiseTransform/: metrics.json
src/output/base/DenoiseTransform -> ColorSpaceTransform/: metrics.json
src/output/base/DenoiseTransform -> ColorSpaceTransform -> EqualizationTransform/: metrics.json
src/output/base/DenoiseTransform -> ColorSpaceTransform -> EqualizationTransform -> NormalizeTransform/: metrics.json
src/output/base/DenoiseTransform -> ColorSpaceTransform -> NormalizeTransform/: metrics.json
src/output/base/DenoiseTransform -> ColorSpaceTransform -> NormalizeTransform -> EqualizationTransform/: metrics.json
src/output/base/DenoiseTransform -> EqualizationTransform/: metrics.json
src/output/base/DenoiseTransform -> EqualizationTransform -> ColorSpaceTransform/: metrics.json
src/output/base/DenoiseTransform -> EqualizationTransform -> ColorSpaceTransform -> NormalizeTransform/: metrics.json
src/output/base/DenoiseTransform -> EqualizationTransform -> NormalizeTransform/: metrics.json
src/output/base/DenoiseTransform -> EqualizationTransform -> NormalizeTransform -> ColorSpaceTransform/: metrics.json
src/output/base/DenoiseTransform -> NormalizeTransform/: metrics.json
src/output/base/DenoiseTransform -> NormalizeTransform -> ColorSpaceTransform/: metrics.json
src/output/base/DenoiseTransform -> NormalizeTransform -> ColorSpaceTransform -> EqualizationTransform/: metrics.json
src/output/base/DenoiseTransform -> NormalizeTransform -> EqualizationTransform/: metrics.json
src/output/base/DenoiseTransform -> NormalizeTransform -> EqualizationTransform -> ColorSpaceTransform/: metrics.json
src/output/base/EqualizationTransform -> ColorSpaceTransform/: metrics.json
src/output/base/EqualizationTransform -> ColorSpaceTransform -> DenoiseTransform/: metrics.json
src/output/base/EqualizationTransform -> ColorSpaceTransform -> DenoiseTransform -> NormalizeTransform/: metrics.json
src/output/base/EqualizationTransform -> ColorSpaceTransform -> NormalizeTransform/: metrics.json
src/output/base/EqualizationTransform -> ColorSpaceTransform -> NormalizeTransform -> DenoiseTransform/: metrics.json
src/output/base/EqualizationTransform -> DenoiseTransform -> ColorSpaceTransform/: metrics.json
src/output/base/EqualizationTransform -> DenoiseTransform -> ColorSpaceTransform -> NormalizeTransform/: metrics.json
src/output/base/EqualizationTransform -> DenoiseTransform -> NormalizeTransform/: metrics.json
src/output/base/EqualizationTransform -> DenoiseTransform -> NormalizeTransform -> ColorSpaceTransform/: metrics.json
src/output/seed_1024/: results_matrix.json
src/output/seed_123/: results_matrix.json
src/output/seed_256/: results_matrix.json
src/output/seed_42/: results_matrix.json
src/output/seed_512/: results_matrix.json
src/params/: colorspace.json  denoise.json  normalize.json
src/util/: __init__.py  cnn.py  config.py  dataset.py  enums.py  export.py  gradcam.py  metrics.py  preprocessing.py  runner.py  statistics.py  training.py  types.py
(+738 files in other folders)
